--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style.css">
-    <link rel="icon" type="imagem/png" href="./assets/senai.png">
+    <link rel="icon" type="imagem/png" href="./assets/logo.png">
     <title>Podcast</title>
 </head>
 
 <body>
     <div class="player">
         <div class="imgbox">
-            <img src="./assets/banner.png" alt="banner do player">
+            <img src="./assets/capa.jpg" alt="capa da música">
         </div>
-        <audio src="./assets/podcast.mp3" type="audio/mp3" controls></audio>
+        <audio src="./assets/Toquinho - Aquarela.mp3" type="audio/mp3" controls></audio>
     </div>
 </body>
 
